**************************************
*** SquirrelMail Stable Series 1.4 ***
**************************************

Version 1.4.17 - SVN
--------------------
  - Allow control over white space wrapping of auto-generated
    SquirrelMail option widgets.
  - Fix matching of alternate identities when replying.

Version 1.4.16 - 28 September 2008
----------------------------------
  - Added support for Latvian.
  - Add submit button type option widget
  - Allow address book lookups by fields other than nickname/alias
  - Include hooks in databased-based preference backend that have
    long been in the file-based preference backend
  - Removed the Address Take (abook_take) plugin; please see the Add
    Address (third party) plugin.
  - Allow a different server address for the POP server to be
    configured when using POP before SMTP.
  - Update the left_main_after_each_folder hook to work on the trash
    folder as well as all other folders.
  - Fix HTML validity issue with IE conditional construct (#1985916).
  - Backported sqsetcookie() from 1.5.2, so cookies won't be
    transmitted under non-SSL connections if the session is
    started under an SSL (https) connection (CVE-2008-3663).
    Also limits cookies to HTTPOnly, a feature of IE and Firefox
    to counter cross site scripting attacks.

Version 1.4.15 - 23 May 2008
----------------------------
  - Fix saving of Read Receipts to Sent folder.
  - Converted Romanian (ro_RO) to UTF-8.
  - Converted Slovak (sk_SK) to UTF-8.
  - Converted Swedish (sv_SE) to UTF-8.

Version 1.4.15 Release Candidate 1 - 12 May 2008
------------------------------------------------
  - Added support for Macedonian.
  - Don't allow invalid plugin names in conf.pl --install-plugin.
  - Fix warning in Printer Friendly due to missing include (#1849101).
  - Let configtest.php use optional PEAR dynamic extension loading,
    patch by Walter Huijbers (#1833123).
  - Fix for IMAP servers that were having problems saving sent messages.